cluster/core/ingress/traefik-additions/basicauth-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth-middleware
  namespace: traefik
spec:
  basicAuth:
    secret: basicauth-secret
